[gd_scene load_steps=6 format=3 uid="uid://bdfdsw2iykl7y"]

[ext_resource type="Script" uid="uid://dhxeqcdxkuw72" path="res://scripts/game_controller.gd" id="1"]
[ext_resource type="PackedScene" uid="uid://bpn3klb7jrb8m" path="res://scenes/Unit.tscn" id="2_rvslj"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_1"]
albedo_color = Color(0.18, 0.18, 0.18, 1)
roughness = 0.95

[sub_resource type="PlaneMesh" id="PlaneMesh_1"]
size = Vector2(1, 1)

[sub_resource type="Environment" id="Environment_rvslj"]

[node name="Main" type="Node3D"]
script = ExtResource("1")

[node name="World" type="Node3D" parent="."]

[node name="Camera3D" type="Camera3D" parent="World"]
transform = Transform3D(1, 0, 0, 0, 0.436645, 0.899634, 0, -0.899634, 0.436645, 0, 4.80302, 2.76378)

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="World"]
transform = Transform3D(0.824145, -0.318361, 0.465347, 0, 0.824145, 0.563828, -0.563827, -0.465347, 0.680196, 0, 0, 0)
light_energy = 1.6
shadow_enabled = true

[node name="CardsRoot" type="Node3D" parent="World"]

[node name="Table" type="MeshInstance3D" parent="World"]
transform = Transform3D(6.5, 0, 0, 0, 1, 0, 0, 0, 4, 0, 0, 0)
material_override = SubResource("StandardMaterial3D_1")
mesh = SubResource("PlaneMesh_1")

[node name="WorldEnvironment" type="WorldEnvironment" parent="World"]
environment = SubResource("Environment_rvslj")

[node name="UI" type="CanvasLayer" parent="."]

[node name="HUD" type="Control" parent="UI"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="HUDBox" type="VBoxContainer" parent="UI/HUD"]
layout_mode = 0
anchor_left = 0.02
anchor_top = 0.02
anchor_right = 0.4
anchor_bottom = 0.4

[node name="TurnLabel" type="Label" parent="UI/HUD/HUDBox"]
layout_mode = 2
text = "Player 1 Turn"

[node name="TroopsLabel" type="Label" parent="UI/HUD/HUDBox"]
layout_mode = 2
text = "Total Troops: 100000"

[node name="EnemyTroopsLabel" type="Label" parent="UI/HUD/HUDBox"]
layout_mode = 2
text = "Enemy Troops: 100000"

[node name="LossLabel" type="Label" parent="UI/HUD/HUDBox"]
layout_mode = 2
text = "Losses Last Turn: 0"

[node name="RemainingLabel" type="Label" parent="UI/HUD/HUDBox"]
layout_mode = 2
text = "Divisions Remaining: 10"

[node name="SituationControls" type="HBoxContainer" parent="UI/HUD/HUDBox"]
layout_mode = 2
size_flags_horizontal = 3

[node name="TerrainSelect" type="OptionButton" parent="UI/HUD/HUDBox/SituationControls"]
layout_mode = 2

[node name="PerspectiveSelect" type="OptionButton" parent="UI/HUD/HUDBox/SituationControls"]
layout_mode = 2

[node name="AddSituationButton" type="Button" parent="UI/HUD/HUDBox/SituationControls"]
layout_mode = 2
text = "Add Situation"

[node name="PlanScroll" type="ScrollContainer" parent="UI/HUD"]
visible = false
layout_mode = 0
anchor_left = 0.02
anchor_top = 0.35
anchor_right = 0.98
anchor_bottom = 0.82

[node name="PlanList" type="VBoxContainer" parent="UI/HUD/PlanScroll"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="EndTurnButton" type="Button" parent="UI/HUD"]
layout_mode = 0
anchor_left = 0.02
anchor_top = 0.85
anchor_right = 0.25
anchor_bottom = 0.95
text = "End Turn"

[node name="PlanControlsRoot" type="Control" parent="UI"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="TurnOverlay" type="Control" parent="UI"]
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="OverlayRect" type="ColorRect" parent="UI/TurnOverlay"]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0, 0, 0, 1)

[node name="AcceptTurnButton" type="Button" parent="UI/TurnOverlay"]
layout_mode = 0
anchor_left = 0.4
anchor_top = 0.45
anchor_right = 0.6
anchor_bottom = 0.55
text = "Accept Turn"

[node name="ResolutionOverlay" type="Control" parent="UI"]
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="ResolutionRect" type="ColorRect" parent="UI/ResolutionOverlay"]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0, 0, 0, 0.9)

[node name="ResolutionPanel" type="PanelContainer" parent="UI/ResolutionOverlay"]
layout_mode = 0
anchor_left = 0.2
anchor_top = 0.15
anchor_right = 0.8
anchor_bottom = 0.85

[node name="ResolutionBox" type="VBoxContainer" parent="UI/ResolutionOverlay/ResolutionPanel"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ResolutionTitle" type="Label" parent="UI/ResolutionOverlay/ResolutionPanel/ResolutionBox"]
layout_mode = 2
text = "Battle Resolution"

[node name="ResolutionList" type="VBoxContainer" parent="UI/ResolutionOverlay/ResolutionPanel/ResolutionBox"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ResolutionAcceptButton" type="Button" parent="UI/ResolutionOverlay/ResolutionPanel/ResolutionBox"]
layout_mode = 2
text = "Accept Turn"

[node name="Unit" parent="." instance=ExtResource("2_rvslj")]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, -0.381253, 0, 0.80617)
